   - otto@cvs.openbsd.org 2006/02/11 19:31:18
     [atomicio.c]
     type correctness; from Ray Lai in PR 5011; ok millert@
   - djm@cvs.openbsd.org 2006/02/12 06:45:34
     [ssh.c ssh_config.5]
     add a %l expansion code to the ControlPath, which is filled in with the
     local hostname at runtime. Requested by henning@ to avoid some problems
     with /home on NFS; ok dtucker@

20060313
 - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
   since not all platforms support it.  Instead, use internal equivalent while
   computing LLONG_MIN and LLONG_MAX.  Remove special case for alpha-dec-osf*
   as it's no longer required.  Tested by Bernhard Simon, ok djm@

20060304
 - (dtucker) [contrib/cygwin/ssh-host-config] Require use of lastlog as a
   file rather than directory, required as Cygwin will be importing lastlog(1).
   Also tightens up permissions on the file.  Patch from vinschen@redhat.com.
 - (dtucker) [gss-serv-krb5.c] Bug #1166: Correct #ifdefs for gssapi_krb5.h
   includes.  Patch from gentoo.riverrat at gmail.com.

20060226
 - (dtucker) [configure.ac] Bug #1156: QNX apparently needs SSHD_ACQUIRES_CTTY
   patch from kraai at ftbfs.org.

20060223
 - (dtucker) [sshd_config sshd_config.5] Update UsePAM to reflect current
   reality.  Pointed out by tryponraj at gmail.com.

20060222
 - (dtucker) [openbsd-compat/openssl-compat.{c,h}] Minor tidy up: only
   compile in compat code if required.

20060221
 - (dtucker) [openbsd-compat/openssl-compat.h] Prevent warning about
   redefinition of SSLeay_add_all_algorithms.

20060220
 - (dtucker) [INSTALL configure.ac openbsd-compat/openssl-compat.{c,h}]
   Add optional enabling of OpenSSL's (hardware) Engine support, via
   configure --with-ssl-engine.  Based in part on a diff by michal at
   logix.cz.

20060219
 - (dtucker) [Makefile.in configure.ac, added openbsd-compat/regress/]
   Add first attempt at regress tests for compat library.  ok djm@

20060214